--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js",
+    "dev": "nodemon app.js"
   },
   "keywords": [
     "api",
@@ -18,10 +20,13 @@
   "description": "RESTful API for country data with exchange rates and GDP calculations",
   "dependencies": {
     "axios": "^1.12.2",
+    "canvas": "^3.2.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
-    "mysql2": "^3.15.3",
+    "mysql2": "^3.15.3"
+  },
+  "devDependencies": {
     "nodemon": "^3.1.10"
   }
 }
